@@ -185,7 +185,7 @@ HostAliases="localhost 127.0.0.1 <%= config[:host] %> stats.<%= config[:host] %>
 # 2 - DNS Lookup is made only from static DNS cache file (if it exists)
 # Default: 2
 #
-DNSLookup=2
+DNSLookup=1
 
 
 # When AWStats updates its statistics, it stores results of its analysis in
