@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Gaspard Bucher"]
-  s.date = %q{2011-11-16}
+  s.date = %q{2011-11-30}
   s.default_executable = %q{zena}
   s.description = %q{zena is a Ruby on Rails  CMS (content managment system) with a focus on usability, ease of customization and web 2.0 goodness (application like behaviour).}
   s.email = %q{gaspard@teti.ch}
@@ -2166,7 +2166,7 @@ Gem::Specification.new do |s|
       s.add_runtime_dependency(%q<syntax>, ["= 1.0.0"])
       s.add_runtime_dependency(%q<gem_plugin>, [">= 0"])
       s.add_runtime_dependency(%q<yamltest>, ["= 0.7.0"])
-      s.add_runtime_dependency(%q<json>, ["= 1.5.1"])
+      s.add_runtime_dependency(%q<json>, [">= 0"])
       s.add_runtime_dependency(%q<will_paginate>, ["~> 2.3.12"])
       s.add_runtime_dependency(%q<gettext>, ["= 2.1.0"])
       s.add_runtime_dependency(%q<versions>, ["= 0.3.1"])
@@ -2192,7 +2192,7 @@ Gem::Specification.new do |s|
       s.add_dependency(%q<syntax>, ["= 1.0.0"])
       s.add_dependency(%q<gem_plugin>, [">= 0"])
       s.add_dependency(%q<yamltest>, ["= 0.7.0"])
-      s.add_dependency(%q<json>, ["= 1.5.1"])
+      s.add_dependency(%q<json>, [">= 0"])
       s.add_dependency(%q<will_paginate>, ["~> 2.3.12"])
       s.add_dependency(%q<gettext>, ["= 2.1.0"])
       s.add_dependency(%q<versions>, ["= 0.3.1"])
@@ -2219,7 +2219,7 @@ Gem::Specification.new do |s|
     s.add_dependency(%q<syntax>, ["= 1.0.0"])
     s.add_dependency(%q<gem_plugin>, [">= 0"])
     s.add_dependency(%q<yamltest>, ["= 0.7.0"])
-    s.add_dependency(%q<json>, ["= 1.5.1"])
+    s.add_dependency(%q<json>, [">= 0"])
     s.add_dependency(%q<will_paginate>, ["~> 2.3.12"])
     s.add_dependency(%q<gettext>, ["= 2.1.0"])
     s.add_dependency(%q<versions>, ["= 0.3.1"])
