@@ -2,11 +2,14 @@
 
 * Major changes
  * Added 'remove_from_db' method to remove a site from the database.
+ * Fixed asset caching PLEASE FIX YOUR VHOST FILES: rake zena:create_vhost -s host='xxxxx'.
+ * Fixed deadlock_retry (a bug in the error message aborted the retry).
 
 * Minor changes
  * Enabled Acl during document upload.
  * Fixed a bug when using [edit] in a list with [add].
  * Fixed 'unknown this' bug in [calendar] when rendering in a [block].
+ * Enabled 'alt_class' to work on multiple elements ([each]).
 
 == 1.1.3 2011-11-09
 
